# cmake-crossplatform

./: CMakeLists.txt  addition.cpp  compile-on-windows.tct  division.cpp  main.cpp  main.h  print_result.cpp
cmake-build/: CMakeCache.txt  Makefile  calculator  cmake_install.cmake
